# flow-matching-6s184

./: .gitignore  README.md  pyproject.toml  requirements.txt
flow_matching_labs/: __init__.py  cfg.py  core.py  distributions.py  dit.py  lab1.py  lab3.py  models.py  paths.py  vae.py
notebooks/: lab_one_completed.ipynb  lab_three.ipynb  lab_three_completed.ipynb  lab_two_completed.ipynb
results/lab1/: metrics.json
results/lab2/: metrics.json  train_log.txt
results/lab3/: cfg_gmm_metrics.json  mnist_finalize_log.txt  mnist_metrics.json  mnist_train_log.txt  toy_log.txt
scripts/: _util.py  finalize_lab3_mnist.py  make_notebooks.py  run_lab1.py  run_lab2.py  run_lab3_mnist.py  run_lab3_toy.py
tests/: conftest.py  test_lab1_simulators.py  test_lab2_paths.py  test_lab3_models.py
