[project]
name = "flow-matching-6s184"
version = "1.0.0"
description = "Implementations of the MIT 6.S184/6.S975 flow-matching & diffusion labs"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "einops>=0.7",
    "scikit-learn>=1.3",
    "torchvision>=0.17",
    "tqdm>=4.66",
    "seaborn>=0.13",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools]
packages = ["flow_matching_labs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
